[gd_scene load_steps=18 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://SourceCodePro-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Platform/platform.tscn" type="PackedScene" id=5]
[ext_resource path="res://grid.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 37.4828, 32.2232 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 155.121, 22.7225 )

[sub_resource type="Animation" id=5]
resource_name = "Move"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -500 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Move"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -500, -500 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Move"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -250, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Move"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -250, 250 ), Vector2( 0, 0 ), Vector2( -250, -250 ), Vector2( 0, 0 ), Vector2( -250, 0 ), Vector2( 0, 0 ), Vector2( -250, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=10]
0/name = "icon.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 9 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.282353, 0.282353, 0.282353, 1 )
margin_left = -2500.0
margin_top = -2500.0
margin_right = 3500.0
margin_bottom = 1500.0
texture = ExtResource( 6 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="CanvasLayer/Control"]
margin_left = 842.672
margin_top = 6.73892
margin_right = 1017.67
margin_bottom = 88.7389
focus_mode = 0
items = [ "Custom", null, false, "Classic GDScript", null, false, "Classic C++", null, false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "HUD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Manual" type="Label" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 468.173
margin_top = 7.02612
margin_right = 603.173
margin_bottom = 78.0261
custom_fonts/font = SubResource( 2 )
text = "SHIFT to run on floor
TAB to enter in slowmo
Lines: 
- red -> last normal
- green -> velocity
- orange -> last motion"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AirFrictionBtn" type="CheckButton" parent="CanvasLayer/Control"]
margin_left = 652.185
margin_top = 36.1594
margin_right = 852.185
margin_bottom = 76.1594
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "Air friction"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlowdownFallingWallBtn" type="CheckButton" parent="CanvasLayer/Control"]
margin_left = 648.937
margin_top = 66.4704
margin_right = 852.937
margin_bottom = 106.47
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "Slodown falling wall"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JumpBtn" type="CheckButton" parent="CanvasLayer/Control"]
margin_left = 641.681
margin_top = 3.73337
margin_right = 851.681
margin_bottom = 43.7334
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "Infinite Jump"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StopSlopeBtn" type="CheckButton" parent="CanvasLayer/Control"]
anchor_left = -2.43999
anchor_top = 0.042807
anchor_right = -0.16499
anchor_bottom = 0.042807
margin_left = 950.0
margin_top = 82.0
margin_right = 1026.0
margin_bottom = 122.0
focus_mode = 0
size_flags_vertical = 15
shortcut_in_tooltip = false
pressed = true
enabled_focus_mode = 0
text = "Stop on slope"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SnapBtn" type="CheckButton" parent="CanvasLayer/Control"]
margin_left = 909.109
margin_top = 113.328
margin_right = 1019.11
margin_bottom = 153.328
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "Snap"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConstantSpeedBtn" type="CheckButton" parent="CanvasLayer/Control"]
margin_left = 841.069
margin_top = 142.87
margin_right = 1020.07
margin_bottom = 182.87
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "Constant Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveOnFloorBtn" type="CheckButton" parent="CanvasLayer/Control"]
margin_left = 821.239
margin_top = 171.593
margin_right = 1020.24
margin_bottom = 211.593
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "Move on floor only"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlideOnCeilingBtn" type="CheckButton" parent="CanvasLayer/Control"]
margin_left = 843.136
margin_top = 202.359
margin_right = 1020.14
margin_bottom = 243.359
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "Slide on ceiling"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Node2D" parent="."]

[node name="Base" type="StaticBody2D" parent="Level"]

[node name="Polygon2D" type="Polygon2D" parent="Level/Base"]
color = Color( 0.00392157, 0.00392157, 0, 1 )
polygon = PoolVector2Array( -285.641, 266.472, -103.341, 301.689, 292.331, 189.824, 419.625, 114.555, 624.075, 116.865, 933.394, 381.085, 1483.18, 372.627, 1484.59, 304.961, 1585.62, 306.371, 1584.21, 242.934, 1677.25, 242.934, 1677.25, 180.907, 1780.16, 180.907, 1911.26, 519.236, 2014.71, 508.822, 2542.7, 156.832, 2512.35, -522.873, 3210.27, -510.735, 3240.61, 1133.91, -2318.41, 1091.43, -2391.23, -1305.75, -1644.77, -1299.68, -1323.12, 502.753, -540.25, 484.547, -540.25, 308.552, -394.598, 308.552, -406.736, 187.176 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level/Base"]

[node name="StaticBody2D1" type="StaticBody2D" parent="Level"]
position = Vector2( 120.283, -47.0884 )
scale = Vector2( 16.6282, 1 )

[node name="icon2" type="Sprite" parent="Level/StaticBody2D1"]
visible = false
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/StaticBody2D1"]
shape = SubResource( 3 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Level"]
position = Vector2( -40.4332, -196.18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/StaticBody2D2"]
position = Vector2( -293.296, -23.2314 )
shape = SubResource( 4 )

[node name="StaticBody2D4" type="StaticBody2D" parent="Level"]
position = Vector2( -40.4332, -196.18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/StaticBody2D4"]
position = Vector2( 617.102, -87.2312 )
rotation = -0.698132
shape = SubResource( 4 )

[node name="StaticBody2D3" type="StaticBody2D" parent="Level"]
position = Vector2( 116.718, -59.092 )
rotation = 0.785398
scale = Vector2( 4, 4 )
__meta__ = {
"_edit_group_": true
}

[node name="icon2" type="Sprite" parent="Level/StaticBody2D3"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/StaticBody2D3"]
shape = SubResource( 3 )

[node name="Platform" parent="Level" instance=ExtResource( 5 )]
position = Vector2( -297.29, -380.845 )

[node name="Platform2" parent="Level" instance=ExtResource( 5 )]
position = Vector2( 1075.39, -18.7261 )

[node name="AnimationPlayer" parent="Level/Platform2/KinematicBody2D" index="2"]
anims/Move = SubResource( 5 )

[node name="Platform3" parent="Level" instance=ExtResource( 5 )]
position = Vector2( -851.894, -125.343 )

[node name="KinematicBody2D" parent="Level/Platform3" index="0"]
position = Vector2( -300, -300 )

[node name="AnimationPlayer" parent="Level/Platform3/KinematicBody2D" index="2"]
anims/Move = SubResource( 6 )

[node name="Platform4" parent="Level" instance=ExtResource( 5 )]
position = Vector2( -753.976, 191.556 )

[node name="KinematicBody2D" parent="Level/Platform4" index="0"]
position = Vector2( -250, 0 )
collision_layer = 2

[node name="icon" parent="Level/Platform4/KinematicBody2D" index="0"]
modulate = Color( 1, 0.0156863, 0.0156863, 1 )

[node name="AnimationPlayer" parent="Level/Platform4/KinematicBody2D" index="2"]
anims/Move = SubResource( 7 )

[node name="CollisionShape2D2" parent="Level/Platform4/KinematicBody2D" index="3"]
visible = false
position = Vector2( -90.9545, -30.2604 )
disabled = true

[node name="CollisionShape2D3" parent="Level/Platform4/KinematicBody2D" index="4"]
visible = false
disabled = true

[node name="Label" type="Label" parent="Level/Platform4/KinematicBody2D" index="5"]
margin_top = -73.0
margin_right = 116.0
margin_bottom = -40.0
custom_fonts/font = ExtResource( 2 )
text = "Excluded"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Platform5" parent="Level" instance=ExtResource( 5 )]
position = Vector2( 2277.51, -100.316 )

[node name="icon" parent="Level/Platform5/KinematicBody2D" index="0"]
visible = false
modulate = Color( 1, 0.0156863, 0.0156863, 1 )

[node name="CollisionShape2D" parent="Level/Platform5/KinematicBody2D" index="1"]
visible = false
position = Vector2( 0, 3.31665 )
disabled = true

[node name="AnimationPlayer" parent="Level/Platform5/KinematicBody2D" index="2"]
playback_speed = 1.5
anims/Move = SubResource( 8 )
anims/RESET = SubResource( 11 )

[node name="CollisionShape2D2" parent="Level/Platform5/KinematicBody2D" index="3"]
visible = false
position = Vector2( -90.9545, -30.2604 )
disabled = true

[node name="CollisionShape2D3" parent="Level/Platform5/KinematicBody2D" index="4"]
visible = false
disabled = true

[node name="Label" type="Label" parent="Level/Platform5/KinematicBody2D" index="5"]
margin_top = -73.0
margin_right = 116.0
margin_bottom = -40.0
custom_fonts/font = ExtResource( 2 )
text = "tilemap"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="Level/Platform5/KinematicBody2D" index="6"]
tile_set = SubResource( 10 )
collision_use_parent = true
format = 1
tile_data = PoolIntArray( -393217, 0, 0, -327681, 0, 0, -262145, 0, 0, -196609, 0, 0, -131073, 0, 0, -65537, 0, 0, -1, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0 )

[connection signal="item_selected" from="CanvasLayer/Control/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="toggled" from="CanvasLayer/Control/AirFrictionBtn" to="." method="_on_AirFrictionBtn_toggled"]
[connection signal="toggled" from="CanvasLayer/Control/SlowdownFallingWallBtn" to="." method="_on_SlowdownFallingWallBtn_toggled"]
[connection signal="toggled" from="CanvasLayer/Control/JumpBtn" to="." method="_on_JumpBtn_toggled"]
[connection signal="toggled" from="CanvasLayer/Control/StopSlopeBtn" to="." method="_on_StopSlopeBtn_toggled"]
[connection signal="toggled" from="CanvasLayer/Control/SnapBtn" to="." method="_on_SnapBtn_toggled"]
[connection signal="toggled" from="CanvasLayer/Control/ConstantSpeedBtn" to="." method="_on_ConstantSpeedBtn_toggled"]
[connection signal="toggled" from="CanvasLayer/Control/MoveOnFloorBtn" to="." method="_on_MoveOnFloorBtn_toggled"]
[connection signal="toggled" from="CanvasLayer/Control/SlideOnCeilingBtn" to="." method="_on_SlideOnCeilingBtn_toggled"]

[editable path="Level/Platform2"]
[editable path="Level/Platform3"]
[editable path="Level/Platform4"]
[editable path="Level/Platform5"]
